Adding gimp-plugin-template files for linux build

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,25 @@
-
-*.sdf
-*.suo
-*.mo
-*.user
-*.pdb
-*.exe
-*.dll
-*.lib
-*.def
-/bin64
-/bin
-/gimp-vtf/x64
-/gimp-vtf/Debug
-/gimp-vtf/Release
-gimp-vtf.props # We want the user to be able to make local modifications to this file
+*.o
+*.swp
+Makefile
+Makefile.in
+INSTALL
+aclocal.m4
+autom4te.cache/
+compile
+config.h
+config.h.in
+config.log
+config.status
+configure
+depcomp
+install-sh
+missing
+stamp-h1
+.deps
+*.gmo
+src/gimp-vtf
+POTFILES
+stamp-it
+intltool-extract.in
+intltool-merge.in
+intltool-update.in
