--- a/configure.in
+++ b/configure.in
@@ -22,7 +22,7 @@ AC_DEFINE(PLUGIN_MAJOR_VERSION, plugin_major_version, [Plug-In major version])
 AC_DEFINE(PLUGIN_MINOR_VERSION, plugin_minor_version, [Plug-In minor version])
 AC_DEFINE(PLUGIN_MICRO_VERSION, plugin_micro_version, [Plug-In micro version])
 
-AC_CONFIG_SRCDIR([src/main.c])
+AC_CONFIG_SRCDIR([gimp-vtf/file-vtf.c])
 AM_CONFIG_HEADER(config.h)
 
 AM_INIT_AUTOMAKE(no-define)
@@ -57,13 +57,20 @@ PKG_CHECK_MODULES(GIMP,
 AC_SUBST(GIMP_CFLAGS)
 AC_SUBST(GIMP_LIBS)
 
+VTFLIB_REQUIRED_VERSION=1.3.2
+
+PKG_CHECK_MODULES([VTFLIB], [VTFLib >= $VTFLIB_REQUIRED_VERSION])
+AC_SUBST(VTFLIB_CFLAGS)
+AC_SUBST(VTFLIB_LIBS)
+
 GIMP_LIBDIR=`$PKG_CONFIG --variable=gimplibdir gimp-2.0`
 AC_SUBST(GIMP_LIBDIR)
 
+AC_PREFIX_DEFAULT("/usr")
 
 dnl i18n stuff
 
-GETTEXT_PACKAGE=gimp20-plugin-template
+GETTEXT_PACKAGE=gimp20-vtf
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE",
 				    [The gettext translation domain.])
@@ -115,7 +122,7 @@ fi
 
 AC_CONFIG_FILES([
 Makefile
-src/Makefile
+gimp-vtf/Makefile
 po/Makefile.in
 help/Makefile
 help/en/Makefile
