--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,5 +1,4 @@
 # List of source files containing translatable strings.
 
-src/interface.c
-src/main.c
-src/render.c
+gimp-vtf/file-vtf-load.c
+gimp-vtf/file-vtf-save.c
